Fix styling on firefox

--- a/src/main.css
+++ b/src/main.css
@@ -72,15 +72,19 @@ body {
 
 .header button {
   -webkit-appearance: none;
+  -moz-appearance: none;
   background-color: var(--color-background);
   color: var(--color-text-muted);
   padding: 0.5rem 1rem;
   font-size: 1rem;
   font-weight: 600;
   flex-grow: 0;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 4px;
+  border: 1px solid currentColor;
   cursor: pointer;
+  margin-top: 1rem;
 }
 
 .header button.active {
